Enhance ShopEAT with UV package management integration. Updated setup scripts, documentation, and backend to utilize UV for dependency management and virtual environments. Improved frontend for continuous voice interaction and added speech synthesis features. Updated .gitignore for UV-related files.

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@ env/
 ENV/
 env.bak/
 venv.bak/
+.venv/           # UV virtual environment
+.uv/             # UV cache and state
 
 # Environment variables
 .env
@@ -34,6 +36,10 @@ venv.bak/
 .env.development.local
 .env.test.local
 .env.production.local
+
+# UV specific
+.uv/
+uv.lock
 
 # Node.js
 node_modules/
@@ -176,3 +182,7 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# UV specific patterns
+.uv/
+uv.lock
