--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,6 @@
+# ShopEAT Backend Dependencies
+# This file is kept for compatibility, but UV will use pyproject.toml
+
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 websockets==12.0
