--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "uvicorn[standard]>=0.24.0",
     "websockets>=12.0",
     "openai>=1.3.7",
+    "openai-agents>=0.1.0",
     "python-dotenv>=1.0.0",
     "pydantic>=2.5.0",
     "python-multipart>=0.0.6",
