--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,11 +1,9 @@
-# ShopEAT Backend Dependencies
-# This file is kept for compatibility, but UV will use pyproject.toml
-
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-websockets==12.0
-openai==1.3.7
-python-dotenv==1.0.0
-pydantic==2.5.0
-python-multipart==0.0.6
-aiofiles==23.2.1
+fastapi>=0.116.1
+uvicorn[standard]>=0.35.0
+websockets>=15.0.1
+openai>=1.102.0
+openai-agents>=0.2.10
+python-dotenv>=1.1.1
+pydantic>=2.11.7
+python-multipart>=0.0.20
+aiofiles>=24.1.0
